8009561: NPG: Metaspace fragmentation when retiring a Metachunk

Use best-fit block-splitting freelist allocation from the block freelist.

Reviewed-by: jmasa, stefank